# skoob

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  models.py  schemas.py  security.py  settings.py
backend/app/api/: dependencies.py  main.py
backend/app/api/routers/: books.py  loans.py  login.py  users.py
backend/app/services/: __init__.py  book.py  loan.py  user.py
